Fix scrollbar

--- a/style.scss
+++ b/style.scss
@@ -2,9 +2,9 @@ $color-light: white;
 $color-dark: red;
 $line-width: 1px;
 $border-radius: 5rem;
-$gap-medium: 2.5rem; 
+$gap-medium: 2.5rem;
 
-$snap-offset: 50%;
+$snap-offset: 20%;
 $snap-force: 9; // nombre impaire!
 
 @function customPow($value, $amt) {
@@ -35,36 +35,66 @@ body {
   height: 100%;
   position: relative;
   overflow: scroll;
+  // margin-top: 10px;
+  // overscroll-behavior: none;
   // border-radius: $border-radius;
 }
 
-.slide {  
+.slide {
   position: sticky;
   width: 100%;
   height: 100%;
-  top: 0;
-  --amt: (var(--index) - var(--scroll));
-  transform: translateY(calc(#{$snap-offset} * #{customPow(var(--amt), $snap-force)}));
-  transition: transform 0.05s;
-  background-color: $color-dark;
+  height: calc(100% + #{$border-radius});
+  top: -$border-radius;
+
+  // overflow: hidden;
+  overflow: hidden;
 }
 
-.slide::before {
-  content: "";
+.slide:first-child {
+  height: 100%;
+  top: 0;
+}
+
+.slide__out {
   position: absolute;
   bottom: 100%;
   height: $border-radius;
   left: 0;
   width: 100%;
   border-radius: 0 0 $border-radius $border-radius;
-  box-shadow: -$border-radius 1px 0 0 $color-dark, $border-radius 1px 0 0 $color-dark;
+  box-shadow: -$border-radius 1px 0 0 $color-dark,
+    $border-radius 1px 0 0 $color-dark;
 }
+
+.slide__snap {
+  --amt: (var(--index) - var(--scroll));
+  transform: translateY(
+    calc((#{$snap-offset} * #{customPow(var(--amt), $snap-force)}))
+  );
+  background-color: $color-dark;
+  // transition: transform 0.05s;
+  position: relative;
+  // top: $border-radius;
+
+  top: #{$border-radius};
+  left: 0;
+  width: 100%;
+  height: calc(100% - #{$border-radius});
+  // height: 100%;
+}
+
+.slide:first-child .slide__snap {
+  top: 0;
+  height: 100%;
+}
+
 .slide__card {
   position: relative;
   outline: $line-width solid $color-dark;
   outline-offset: -$line-width;
   padding: $gap-medium;
-  overflow: hidden;
+  // overflow: hidden;
   background: $color-light;
   border-radius: $border-radius;
   width: 100%;
